--- a/backend/composer.json
+++ b/backend/composer.json
@@ -13,6 +13,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "friendsofphp/php-cs-fixer": "^3.22",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
@@ -34,6 +35,12 @@
         }
     },
     "scripts": {
+        "lint": [
+            "./vendor/bin/phpstan analyse"
+        ],
+        "format": [
+            "./vendor/bin/php-cs-fixer fix ."
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
