--- a/backend/composer.json
+++ b/backend/composer.json
@@ -36,7 +36,7 @@
     },
     "scripts": {
         "lint": [
-            "./vendor/bin/phpstan analyse"
+            "./vendor/bin/phpstan analyse --memory-limit=2G"
         ],
         "format": [
             "./vendor/bin/php-cs-fixer fix ."
